--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="./css/style-home.css">
 </head>
 <body>
+    <button id="upbtn"><i class="fa-solid fa-circle-chevron-up"></i></button>
+
     <header>
         <nav>
             <div class="logo">
@@ -349,7 +351,6 @@
             </div>
         </div>
     </footer>
-
-
+    <script src="./main.js"></script>
 </body>
 </html>
